--- a/packages/web/src/viewer/styles/utils.css
+++ b/packages/web/src/viewer/styles/utils.css
@@ -367,6 +367,6 @@
 .chart-block {
   display: block;
   width: 100%;
-  max-width: 600px;
+  max-width: 100%;
   margin-bottom: 16px;
 }
